fix for download img wrong height size

--- a/css/styles.css
+++ b/css/styles.css
@@ -190,6 +190,19 @@ nav li:hover {
     background-color: var(--primary-color);
 }
 
+/* scroll bar */
+::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--tertiary-color);
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--primary-color);
+}
+
 /* section .game-list*/
 .game-list {
     background-color: var(--primary-color);
@@ -303,12 +316,13 @@ button img {
 
 .game-portfolio img:last-of-type {
     width: 30px;
+    height: auto;
     position: absolute;
-    top: 50%;
+    top: 89%;
     left: 80%;
 }
 
-.game-portfolio img {
+.game-portfolio img:first-of-type {
     width: 100%;
     height: 250px;
     border-radius: 5px 5px 0 0;
